<resources>
    <string name="app_name">Epicentre</string>
    <string name="title_earthquake">Earthquake</string>
    <string name="title_earthquake_2">Earthquakes in Indonesia</string>
    <string name="title_prediction">Prediction</string>
    <string name="title_news">News</string>
    <string name="title_news2">BMKG News</string>

    <!--Earthquakes-->
    <string name="gempa_wilayah">Location</string>
    <string name="gempa_kedalaman">Depth</string>
    <string name="gempa_waktu">%1$s %2$s</string>
    <string name="gempa_skala">%1$s</string>
    <string name="map_mode">Map Mode</string>

    <string name="gempa_magnitude">M %1$s</string>
    <string name="gempa_date">Date</string>
    <string name="gempa_date_value">00-00-00</string>

    <string name="gempa_lokasi">Location</string>
    <string name="gempa_lokasi_value">Location</string>

    <string name="gempa_depth">Depth</string>
    <string name="gempa_depth_value">0.0</string>

    <!--News-->
    <string name="news_title">News Title</string>
    <string name="news_author">News Author</string>
    <string name="news_link">News Link</string>
    <string name="news_published">News Published At</string>

    <!--Prediction-->
    <string name="location">Location</string>
    <string name="location_value">Click to search</string>
    <string name="date">Date</string>
    <string name="date_value">Click to set</string>
    <string name="predict">Predict</string>
    <string name="prediction_result">Prediction Result</string>
    <string name="prediction_magnitude">Magnitude</string>
    <string name="prediction_magnitude_value">0.0</string>
    <string name="switch_map">Google Map</string>

    <string name="api_key">API_KEY</string>

    <string name="prediction_disclaimer">Disclaimer</string>
    <string name="prediction_disclaimer_value">This result is merely a prediction, therefore it should not be taken as a guaranteed event.</string>
    <string name="empty_predict_message">Location or date must NOT be empty!</string>
    <string name="connection_error">Connection error!</string>
    <string name="try_again">Try again</string>

    //menu
    <string name="change_language_settings">Language Settings</string>
    <string name="change_settings">Settings</string>
</resources>