<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.b21cap0397.endf.ui.earthquake.HomeFragment"
        android:label="@string/title_earthquake"
        tools:layout="@layout/fragment_eartquake" />

    <fragment
        android:id="@+id/nav_prediction"
        android:name="com.b21cap0397.endf.ui.prediction.PredictionFragment"
        android:label="@string/title_prediction"
        tools:layout="@layout/fragment_prediction" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.b21cap0397.endf.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />
</navigation>