<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:paddingBottom="?attr/actionBarSize"
    tools:context=".ui.prediction.PredictionFragment">


    <TextView
        android:id="@+id/tv_date"
        style="@style/Theme.ENDF.PredictionKeys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date_value"
        style="@style/Theme.ENDF.PredictionValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_prediction_values"
        android:drawablePadding="40dp"
        android:text="@string/date_value"
        app:drawableEndCompat="@drawable/ic_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/Theme.ENDF.PredictionKeys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date_value" />

    <TextView
        android:id="@+id/tv_location_value"
        style="@style/Theme.ENDF.PredictionValues"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_prediction_values"
        android:drawablePadding="40dp"
        android:text="@string/location_value"
        app:drawableEndCompat="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/sw_map"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="false"
        android:paddingStart="14dp"
        android:paddingEnd="1dp"
        android:text="@string/switch_map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location_value" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/google_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="2dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_map"
        tools:context="com.example.mapwithmarker.MapsMarkerActivity" />

    <Button
        android:id="@+id/bt_predict"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:background="@drawable/bg_button_predict"
        android:padding="0dp"
        android:text="@string/predict"
        android:textColor="@drawable/text_button_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_map"
        app:layout_constraintVertical_bias="0.250" />


</androidx.constraintlayout.widget.ConstraintLayout>