<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        tools:context=".ui.prediction.PredictionResultFragment">


        <TextView
            android:id="@+id/tv_prediction_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prediction_result"
            android:textColor="@color/primaryColor"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_geocode_result"
            style="@style/Theme.ENDF.PredictionKeys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/geocode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_prediction_result" />

        <TextView
            android:id="@+id/tv_geocode_result_value"
            style="@style/Theme.ENDF.PredictionValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_prediction_values"
            android:text="@string/geocode_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_geocode_result" />

        <TextView
            android:id="@+id/tv_date_result"
            style="@style/Theme.ENDF.PredictionKeys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_geocode_result_value" />

        <TextView
            android:id="@+id/tv_date_result_value"
            style="@style/Theme.ENDF.PredictionValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_prediction_values"
            android:text="@string/date_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_result" />

        <TextView
            android:id="@+id/tv_prediction_magnitude"
            style="@style/Theme.ENDF.PredictionKeys"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/prediction_magnitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_result_value" />

        <TextView
            android:id="@+id/tv_prediction_magnitude_value"
            style="@style/Theme.ENDF.PredictionValues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_prediction_values"
            android:text="@string/prediction_magnitude_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_prediction_magnitude" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

