<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_item"
    style="@style/Theme.ENDF.CardViewStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rv_news_item_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_news_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_news_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:text="@string/news_title"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_news_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/iv_news_image"
            app:layout_constraintTop_toTopOf="@+id/iv_news_image"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_news_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:drawablePadding="8dp"
            android:text="@string/news_author"
            android:textSize="13sp"
            app:drawableStartCompat="@drawable/ic_news_author"
            app:layout_constraintBottom_toBottomOf="@+id/iv_news_image"
            app:layout_constraintStart_toEndOf="@+id/iv_news_image" />

        <TextView
            android:id="@+id/tv_news_published"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:drawablePadding="8dp"
            android:gravity="end"
            android:text="@string/news_published"
            android:textSize="13sp"
            app:drawableStartCompat="@drawable/ic_eq_time"
            app:layout_constraintBottom_toBottomOf="@+id/iv_news_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_news_author" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
